# store

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  django_rest  docker-compose.yaml  pyproject.toml  requirements.txt
api_app/: custom_pagination.py  custom_permissions.py  serializers.py  urls.py  views.py
api_app/auth_session_app/: serialzers.py  views.py
api_app/order_basket/: serializers.py  views.py
api_app/product_category/: views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_address_alter_order_basket_history_and_more.py
orders/templates/orders/: order-create.html  order.html  orders.html  success.html
products/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options_alter_productcategory_options.py  0003_basket.py  0004_alter_product_category.py
products/templates/products/: base.html  baskets.html  index.html  products.html
store/: celery.py  config.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py
users/templates/users/: base.html  email_verification.html  login.html  profile.html  register.html
